--- a/_includes/head.html
+++ b/_includes/head.html
@@ -81,12 +81,12 @@
 
    <!-- End SEO stuff -->
 
-  <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="/assets/css/font-awesome/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="/assets/css/main.css" />
-   <link href="/assets/css/syntax.css" rel="stylesheet">
+  <link rel="stylesheet" href="/ShootYourFriendsWebsite/assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="/ShootYourFriendsWebsite/assets/css/font-awesome/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="/ShootYourFriendsWebsite/assets/css/main.css" />
+   <link href="/ShootYourFriendsWebsite/assets/css/syntax.css" rel="stylesheet">
 
-  <script src="/assets/js/jquery.min.js"></script>
-  <script src="/assets/js/bootstrap.min.js"></script>
+  <script src="/ShootYourFriendsWebsite/assets/js/jquery.min.js"></script>
+  <script src="/ShootYourFriendsWebsite/assets/js/bootstrap.min.js"></script>
 
 </head>
