--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-  <link rel="shortcut icon" type="image/png" href="/icon.png" />
+  <link rel="shortcut icon" type="image/png" href="/ShootYourFriendsWebsite/icon.png" />
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@koint">
@@ -28,8 +28,8 @@
   <meta name="twitter:url" content="{{site.url}}{{page.url}}">
 
   <meta property="og:site_name" content="{{site.name}}" />
-  <meta property="og:image" content="{{site.url}}/assets/images/{{page.id}}/top.jpg" />
-  <meta name="twitter:image" content="{{site.url}}/assets/images/{{page.id}}/top.jpg">
+  <meta property="og:image" content="{{site.url}}/ShootYourFriendsWebsite/assets/images/{{page.id}}/top.jpg" />
+  <meta name="twitter:image" content="{{site.url}}/ShootYourFriendsWebsite/assets/images/{{page.id}}/top.jpg">
 
   {% if page.id %} <!-- if it's an article -->
   <meta property="og:type" content="article" />
