--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-  <link rel="shortcut icon" type="image/png" href="/ShootYourFriendsWebsite/icon.png" />
+  <link rel="shortcut icon" type="image/png" href="/icon.png" />
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@koint">
@@ -28,8 +28,8 @@
   <meta name="twitter:url" content="{{site.url}}{{page.url}}">
 
   <meta property="og:site_name" content="{{site.name}}" />
-  <meta property="og:image" content="{{site.url}}/ShootYourFriendsWebsite/assets/images/{{page.id}}/top.jpg" />
-  <meta name="twitter:image" content="{{site.url}}/ShootYourFriendsWebsite/assets/images/{{page.id}}/top.jpg">
+  <meta property="og:image" content="{{site.url}}/assets/images/{{page.id}}/top.jpg" />
+  <meta name="twitter:image" content="{{site.url}}/assets/images/{{page.id}}/top.jpg">
 
   {% if page.id %} <!-- if it's an article -->
   <meta property="og:type" content="article" />
@@ -81,12 +81,12 @@
 
    <!-- End SEO stuff -->
 
-  <link rel="stylesheet" href="/ShootYourFriendsWebsite/assets/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="/ShootYourFriendsWebsite/assets/css/font-awesome/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="/ShootYourFriendsWebsite/assets/css/main.css" />
-   <link href="/ShootYourFriendsWebsite/assets/css/syntax.css" rel="stylesheet">
+  <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="/assets/css/font-awesome/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="/assets/css/main.css" />
+   <link href="/assets/css/syntax.css" rel="stylesheet">
 
-  <script src="/ShootYourFriendsWebsite/assets/js/jquery.min.js"></script>
-  <script src="/ShootYourFriendsWebsite/assets/js/bootstrap.min.js"></script>
+  <script src="/assets/js/jquery.min.js"></script>
+  <script src="/assets/js/bootstrap.min.js"></script>
 
 </head>
