--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 		<strong>{{ page.published | date: '%B %d, %Y' }}</strong> ( last updated : {{ page.date | date: '%B %d, %Y' }} )
 		<br>
 		{% for tag in page.tags %}
-			<a class="label label-default" href="/ShootYourFriendsWebsite/tags/#{{ tag | slugify }}">{{ tag }}</a>
+			<a class="label label-default" href="/tags/#{{ tag | slugify }}">{{ tag }}</a>
 		{% endfor %}
     </p>
 	{%if page.github %}
