--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,7 @@
 			  {% for tag in page.tags %}
 			  {% if allpost.tags contains tag and allpost.id != page.id %}
 			  <li>
-				  <p>Here</p>
-			      <a href="{{ allpost.url }}">
+			      <a href="/ShootYourFriendsWebsite{{ allpost.url }}">
 			        {{ allpost.title }}
 			      </a>
 			  </li>
