DEBUG: trying to find location of image tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
     </p>
 	{%if page.github %}
 	<p>
+		PRINT A THING HERE
     	<a href="{{ page.github }}" class="btn btn-default">
 		    <i class="fa fa-github fa-2x"></i>  {{ page.github }}
 			</a>
