Color updates and remove / replace hyperlinks

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,7 +16,7 @@ body {
 }
 
 .jumbotron {
-	background: #719d7d;
+	background: #8100d6;
 }
 
 .jumbotron h1 {
@@ -54,7 +54,7 @@ body {
 
 .navbar-default {
 	background-color: black;
-	border-color: #12421f;
+	border-color: #510086;
 	text-transform: uppercase;
 	font-size: 1.3em;
 }
@@ -92,39 +92,39 @@ body {
 .navbar-default .navbar-nav>li>.dropdown-menu>li>a:hover,
 	.navbar-default .navbar-nav>li>.dropdown-menu>li>a:focus {
 	color: #ffffff;
-	background-color: #12421f;
+	background-color: #510086;
 }
 
 .navbar-default .navbar-nav>li>.dropdown-menu>li>.divider {
-	background-color: #12421f;
+	background-color: #510086;
 }
 
 .navbar-default .navbar-nav .open .dropdown-menu>.active>a,
 	.navbar-default .navbar-nav .open .dropdown-menu>.active>a:hover,
 	.navbar-default .navbar-nav .open .dropdown-menu>.active>a:focus {
 	color: #ffffff;
-	background-color: #12421f;
+	background-color: #510086;
 }
 
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover,
 	.navbar-default .navbar-nav>.active>a:focus {
 	color: #ffffff;
-	background-color: #12421f;
+	background-color: #510086;
 }
 
 .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover,
 	.navbar-default .navbar-nav>.open>a:focus {
 	color: #ffffff;
-	background-color: #12421f;
+	background-color: #510086;
 }
 
 .navbar-default .navbar-toggle {
-	border-color: #12421f;
+	border-color: #510086;
 }
 
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus
 	{
-	background-color: #12421f;
+	background-color: #510086;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -155,6 +155,6 @@ body {
 		.navbar-default .navbar-nav .open .dropdown-menu>.active>a:hover,
 		.navbar-default .navbar-nav .open .dropdown-menu>.active>a:focus {
 		color: #ffffff;
-		background-color: #12421f;
+		background-color: #510086;
 	}
 }
